--- a/image_tag.html
+++ b/image_tag.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-<img src="https://github.com/dingco2023/markantonio.github.io/blob/main/tvseriesposter.jpg"alt="This is a TV Series poster"width="500px"/>
+<img src="tvseriesposter.jpg"alt="This is a TV Series poster"width="500px"/>
 </body>
 
 </html>
