--- a/form_blue.html
+++ b/form_blue.html
@@ -1,3 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!
+  Group Members:
+  Gabriel Mari S. Flores
+  
+  
+  >
+</head>
+<body>
+<h1>Registration Form</h1>
+  
+</body>
+</html>
