--- a/form_blue.html
+++ b/form_blue.html
@@ -3,13 +3,38 @@
 <head>
   <!
   Group Members:
-  Gabriel Mari S. Flores
-  
-  
+ 	 Gabriel Mari S. Flores
+	Agupitan Christopher A. Jr.
+	Antonio, Mark Eric
+	Jornales, Peter joshua O.
   >
 </head>
 <body>
 <h1>Registration Form</h1>
-  
+
+	<form> 
+	First Name: <input type=”text” name=”firstname”> <br/>
+Last Name: <input type=”text” name=”lastname”> <br/>
+	Nick Name: <input type=”text” name=”nickname”> <br/>
+	Email: <input type= "text" name= "Email" /> <br>
+	Password: <input type= "password" name= "password" /> <br/>
+	 <label for="Date of Birth">Date of Birth:</label>
+  	<input type="date" id="Date of Birth" name="Date of Birth">
+ 	<br>
+
+ Gender: <input type="radio" id="male" name="gender" value="male">
+  <label for="male">Male</label>
+
+  <input type="radio" id="female" name="gender" value="female">
+  <label for="female">Female</label><br>
+
+
+	Mobile: <input type=”text” name=”mobile”> <br/>
+	Address: <textarea name=”address” cols=”30”rows=”10”></textarea> <br/>
+	</form>
+	
+<button type="button">Submit</button>
+  	<button type="button">Reset</button>
 </body>
 </html>
+
