--- a/Prelims_Antonio.html
+++ b/Prelims_Antonio.html
@@ -37,7 +37,7 @@
         </style>
     </head>
     <body>
-        <img src="C:\Users\Jay Jay\Desktop\2024-02-17 021839.png"alt="My photo">
+        <img src="2024-02-17 021839.png"alt="My photo">
         <h1><b>Mark Eric L. Antonio</b></h1>
         <p><i>I am an experienced BPO professional with excellent communication skills in both oral and written English. 
             Currently, I am pursuing undergraduate studies in Information Systems, where I am receiving academic training in systems analysis and IT project management. 
