--- a/Prelims_Antonio.html
+++ b/Prelims_Antonio.html
@@ -4,7 +4,7 @@
         <title>My Online Resume</title>
         <style>
 	         body{
-                background-image: url('C:\Users\Jay Jay\Desktop\blue-fade-4h72cgu0zrwk6ga4.jpg');
+                background-image: url('blue-fade-4h72cgu0zrwk6ga4.jpg');
                 background-size: cover;
                 background-repeat: no-repeat;
 		        text-align: center;
