--- a/Prelims_Antonio.html
+++ b/Prelims_Antonio.html
@@ -51,6 +51,40 @@
             <li>meantonio@gbox.adnu.edu.ph</li>
         </ul>
         <hr>
+	 <h4>PROFESSIONAL EXPERIENCE</h4>
+        <table>
+            <tr>
+                <th>Position</th>
+                <th>Company</th>
+                <th>Address</th>
+                <th>Date</th>
+            </tr>
+            <tr>
+                <td>Sales Associate</td>
+                <td>WNS Global Services Phils. Inc.</td>
+                <td> 1110 Eastwood Ave, Bagumbayan, Quezon City</td>
+                <td>November 2015 - May 2017</td>
+            </tr>
+            <tr>
+                <td>Collections Support Associate</td>
+                <td>Accenture Philippines</td>
+                <td> 11880 Eastwood, Libis 1110 Quezon City</td>
+                <td>December 2017 - June 2018</td>
+            </tr>
+            <tr>
+                <td>Travel and Visa Coordinator</td>
+                <td>Manila Philippines Area Office</td>
+                <td> Greenmeadows Subdivision, White Plains, Quezon City</td>
+                <td>September 2018 - December 2018</td>
+            </tr>
+            <tr>
+                <td>Technical Support Associate</td>
+                <td>Sykes Philippines</td>
+                <td>Glorietta 1 Corporate Center 1200 Makati </td>
+                <td>June 2019 - September 2019</td>
+            </tr>
+            <hr>
+        </table>
         <h4><b>EDUCATIONAL HISTORY</b></h4>
         <table>
             <tr>
