--- a/Prelims_Antonio.html
+++ b/Prelims_Antonio.html
@@ -85,7 +85,7 @@
             </tr>
             <hr>
         </table>
-        <h4><b>EDUCATIONAL HISTORY</b></h4>
+        <h4><b>EDUCATION</b></h4>
         <table>
             <tr>
                 <th>School</th>
@@ -156,7 +156,7 @@
                 </tr>
             </table>
         <hr>
-        <h4>VOLUNTEER WORK</h4>
+        <h4>VOLUNTEER WORKS</h4>
         <table>
             <tr>
                  <th>Position</th>
@@ -185,7 +185,7 @@
             </tr>
         </table>
         <hr>
-        <h4><b>CHARACTER REFERENCE</b></h4>
+        <h4><b>CHARACTER REFERENCES</b></h4>
         <ol>
             <li>Ma. Lourder D. Pancho</li>
             <p>Director, DTI Sorsogon</p>
